k8s/notification/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: notification-service
        subset: v1
      weight: 90
    - destination:
        host: notification-service
        subset: v2
      weight: 10
